Anshika's first commit

--- a/forms.html
+++ b/forms.html
@@ -93,6 +93,70 @@
 
 <input type="text" class="form-control" placeholder="Text Input" disabled>
 
+<br/>
+<hr>
+
+<div class="row">
+  
+  <div class="form-group has-success col-xs-2">
+    <label for="textInput1" class="sr-only">Text Input 1  </label>
+      <input type="text" class="form-control" id="textInput1 " placeholder="Text Input 1">
+   
+  </div>
+  
+  <div class="form-group has-error col-xs-6">
+    <label for="textInput2" class="sr-only">Text Input 2  </label>
+      <input type="text" class="form-control input-lg" id="textInput2 " placeholder="Text Input 2">
+   
+  </div>
+
+  <div class="form-group has-warning col-xs-4">
+    <label for="textInput3" class="sr-only">Text Input 3 </label>
+      <input type="text" class="form-control input-sm" id="textInput3 " placeholder="Text Input 3">
+    
+  </div>
+</div>
+
+<br/>
+<hr>
+   
+<div class="form-group has-feedback has-warning ">
+  <label for="textInput4" class="sr-only">Text Input   </label>
+    <input type="text" class="form-control" id="textInput4 " placeholder="Text Input ">
+
+ <span class="glyphicon glyphicon-alert form-control-feedback"></span>
+ <span class="sr-only">Warning</span>   
+ 
+</div>
+<br/>
+<hr>
+
+<div class="input-group has-feedback has-success ">
+  <label for="textInput4" class="sr-only">Text Input   </label>
+  <span class="input-group-addon">@</span>
+    <input type="text" class="form-control" id="textInput4 " placeholder="Text Input ">
+
+ <span class="glyphicon glyphicon-ok form-control-feedback"></span>
+ <span class="sr-only">Warning</span>   
+ 
+</div>
+
+<br/>
+<hr>
+
+<div class="input-group has-feedback has-success ">
+  <label for="textInput4" class="sr-only">Text Input   </label>
+  
+    <input type="text" class="form-control" id="textInput4 " placeholder="Text Input ">
+
+ <span class="input-group-btn">
+  <button type="button" class="btn btn-default">Submit</button>
+ </span>
+ <span class="sr-only">Warning</span>   
+ 
+</div>
+
+
 
         </form>
     
